# kubig2025

./: .gitignore  CMakeLists.txt  README.md  environment.yml  mydaemon.sh  mydeamon.service  temp_bashrc.sh  test.yuv
atmega128/: ch11_1_dc_delay.c  ch1_2_led2.c  ch3_1_led_patrol.c  ch3_8_multi_button.c  ch3_9_fnd.c  ch5_2_ledapp.c  ch5_3_FND_ interrupt.c  ch8_2_uart2.c
c_example/: charNumber.c  fahr2celsius.c  limit.c  makefile
cpp/: hello2.cpp  refernece  swap.cpp
data/: info.txt  text.txt
docker_test/: Dockerfile  compose.yml
ds/: generic  generic.c  strcpy  strcpy.c  testArray  testArray.c  testArray2  testArray2.c  variantSizeArray.c  variantSizeArray2.c
final/: Web.py  mmm.db
finalproject2/: mmm.db
ml_dl_python/: a01_jupyter.ipynb  a02_fish.ipynb  a03_.ipynb  a03_numpy.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a09_classification.ipynb  a10_batch_slope.ipynb  a11_decision_tree.ipynb  a12_cross_validation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a27_vae.ipynb
network/: hello_server.c
opencv_test/: CMakeLists.txt  best-embedding-model.h5  zmq_client.cpp  zmq_client_py.py  zmq_server.cpp  zmq_server_py.py
orange33/: mlp_test.py  xgboost_parameter.ipynb
python/: a01.py  a02_keyward.py  a04_print.py  a08_str_indexing.py  a12_str_class.py  a15_datetime.py  conda.txt  example1.py  example2.py  example3.py  mymodule.c
raspberryPi/: Makefile  helloRaspberry.c  led_driver_native  led_driver_native.c  switch_driver_nativer
sqlQuerry/: bookSql  (+3 more)
sqlQuery/: CMakeLists.txt  bookSql.c  createDbTable.sql
(+690 files in other folders)
